<resources>
    <string name="app_name">Echo</string>
    <string name="navigation_drawer_open">  Open navigation drawer  </string>
    <string name="navigation_drawer_close"> Close navigation drawer </string>

    <string name="mainScreenFragOn">          Main Screen Frag On   </string>
    <string name="mainScreenFragOff">         Main Screen Frag Off   </string>

    <string name="nav_header_title">     Android Studio            </string>
    <string name="nav_header_subtitle">  android.studio@android.com</string>
    <string name="nav_header_desc">      Navigation header         </string>
    <string name="action_settings">      Settings                  </string>

    <string name="menu_home">       Home       </string>
    <string name="menu_gallery">    Gallery    </string>
    <string name="menu_slideshow">  Slideshow  </string>
    <string name="menu_tools">      Tools      </string>
    <string name="menu_share">      Share      </string>
    <string name="menu_send">       Send       </string>
    <string name="_1">               1        </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">`   Hello blank fragment   </string>
    <string name="now_playing">             Now Playing            </string>
    <string name="song_title">              …                      </string>
    <string name="you_do_not_have_any_songs_at_the_moment">You do not have any songs at the moment</string>
    <string name="stay_away_to_heaven">  Stay Away to heaven       </string>

    <string name="let_me_love_you">Let me love you</string>

    <string name="todo">TODO</string>
    <string name="come_as_you_are">                 Come as You are                 </string>
    <string name="you_haven_t_got_any_favourites"> You haven\'t got any Favourites !</string>
    <string name="shake_to_change_song">           Shake to change song             </string>
    <string name="back_to_list">                    Back to list                    </string>
    <string name="by_name">                         By name                         </string>
    <string name="by_recently_added">               By recently added               </string>
    <string name="a">                               a                               </string>
    <string name="todo1">                           TODO1                           </string>
    <string name="todo2">                           TODO                            </string>
    <string name="_3">                              3                               </string>
    <string name="_4" />
    <string name="_5">                              5                                </string>
    <string name="todo11">                          TODO11                           </string>
    <string name="_11">                             11                               </string>


    <string name="developed_by_ashtad_irani">       Developed by : Ashtad Irani      </string>

    <string name="thank_you_for_using_our_app">Thank you for using our app :)</string>
    <string name="app_version_1_0">App Version : 1.0</string>
</resources>
