<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="50dp"
    >

    <ImageView
        android:id="@+id/profilePhoto"
        android:src="@drawable/profile"
        android:layout_marginBottom="10dp"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo1"/>

    <TextView
        android:id="@+id/edu1"
        android:text="@string/developed_by_ashtad_irani"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/edu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:padding="5dp"
        android:text="@string/app_version_1_0"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>